@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  *
@@ -21,12 +20,13 @@
   <div id="forum-statistics-header"><?php print t("What's Going On?"); ?></div>
 
   <div id="forum-statistics-active-header" class="forum-statistics-sub-header">
-    <?php print t('Currently active users: !current_total (!current_users users and !current_guests guests)', array('!current_total' => $current_total, '!current_users' => $current_users, '!current_guests' => $current_guests)); ?>
+    <?php print t('Currently active users: !current_total', array('!current_total' => $current_total)); ?>
   </div>
-
-  <div id="forum-statistics-active-body" class="forum-statistics-sub-body">
-    <?php print $online_users; ?>
-  </div>
+  <?php if (!empty($online_users)) : ?>
+    <div id="forum-statistics-active-body" class="forum-statistics-sub-body">
+      <?php print $online_users; ?>
+    </div>
+  <?php endif; ?>
 
   <div id="forum-statistics-statistics-header" class="forum-statistics-sub-header">
     <?php print t('Statistics'); ?>
